加上个人配置

--- a/.env.local
+++ b/.env.local
@@ -20,7 +20,7 @@ NOTION_PAGE_ID=daa797b8492a478cbe143ba4e331a8c6
 # NEXT_PUBLIC_BIO=
 # NEXT_PUBLIC_LINK=
 # NEXT_PUBLIC_KEYWORD=
-# NEXT_PUBLIC_CONTACT_EMAIL=
+NEXT_PUBLIC_CONTACT_EMAIL=life127@outlook.com
 # NEXT_PUBLIC_CONTACT_WEIBO=
 # NEXT_PUBLIC_CONTACT_TWITTER= 
 # NEXT_PUBLIC_CONTACT_GITHUB=
